<resources>
    <string name="AES_KEY">qtutca95wuu5qk8r</string>
    <string name="BASE_API">http://E035d73capp.miapp88api.com/Api/</string>
    <string name="MD5_KEY">vkxv5mit6o0qq2nk</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">我的</string>
    <string name="action_close">Close</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_abbreviation">Q信</string>
    <string name="app_name">Q信</string>
    <string name="app_ppdate_immediately">马上更新</string>
    <string name="app_server_head_img_folder">head</string>
    <string name="app_update_content">"版本号: 
版本大小: 
更新日志:
"</string>
    <string name="app_update_title">应用更新</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attach_picture">图片</string>
    <string name="attach_red_pkg">发红包</string>
    <string name="attach_share">分享注单</string>
    <string name="attach_share_yk">今日盈亏</string>
    <string name="attach_sing_in">签到</string>
    <string name="attach_take_pic">拍照</string>
    <string name="base_url_http">http://E035d73cchatapp.miapp88api.com/api/</string>
    <string name="base_url_im">ws://E035d73cchatapp.miapp88api.com/dgg</string>
    <string name="base_url_im1">ws://e035jt78chatapp.miapp88api.com/dgg</string>
    <string name="base_url_im2">ws://e035ke89chatapp.miapp88api.com/dgg</string>
    <string name="base_url_img_download">http://down1.dggimage.com/</string>
    <string name="base_url_img_upload">http://upload.dggimage.com/</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy">购彩大厅</string>
    <string name="cancel">取消</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据~</string>
    <string name="common_empty_msg_and_click_again">"抱歉,暂未获取到数据!
请点击屏幕重试~"</string>
    <string name="common_error_msg">"抱歉,系统出错了!
请点击屏幕重试~"</string>
    <string name="common_no_network_msg">"暂未连接上网络!
请连接后点击屏幕重试~"</string>
    <string name="copy_message">复制</string>
    <string name="data_wrong">数据出错</string>
    <string name="define_roundedimageview" />
    <string name="del_message">撤回</string>
    <string name="dialog_txt">加载中...</string>
    <string name="discount">优惠活动</string>
    <string name="empty_button">重试</string>
    <string name="empty_directory_hint">Empty directory</string>
    <string name="empty_message">啥也没有</string>
    <string name="error_button">重试</string>
    <string name="error_message">哎呀！发生了一些错误</string>
    <string name="exit_one_more_time">再按一次退出</string>
    <string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
    <string name="file_picker_app_name">MaterialFilePicker</string>
    <string name="gif_tag">动图</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="huifu">回复 </string>
    <string name="ijkplayer_dummy" />
    <string name="jump_ad">跳过</string>
    <string name="library_android_database_sqlcipher_author">Zetetic, LLC</string>
    <string name="library_android_database_sqlcipher_authorWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_isOpenSource">true</string>
    <string name="library_android_database_sqlcipher_libraryDescription">Android SQLite API based on SQLCipher</string>
    <string name="library_android_database_sqlcipher_libraryName">SQLCipher for Android</string>
    <string name="library_android_database_sqlcipher_libraryVersion">${clientVersionNumber}</string>
    <string name="library_android_database_sqlcipher_libraryWebsite">https://www.zetetic.net/sqlcipher/</string>
    <string name="library_android_database_sqlcipher_licenseLink">https://www.zetetic.net/sqlcipher/license/</string>
    <string name="library_android_database_sqlcipher_repositoryLink">https://github.com/sqlcipher/android-database-sqlcipher</string>
    <string name="library_roundedimageview_author">Vince Mi</string>
    <string name="library_roundedimageview_authorWebsite">https://github.com/vinc3m1</string>
    <string name="library_roundedimageview_isOpenSource">true</string>
    <string name="library_roundedimageview_libraryDescription">A fast ImageView (and Drawable) that supports rounded corners (and ovals or circles) based on the original example from Romain Guy.</string>
    <string name="library_roundedimageview_libraryName">RoundedImageView</string>
    <string name="library_roundedimageview_libraryVersion">1.3.0</string>
    <string name="library_roundedimageview_libraryWebsite">https://github.com/vinc3m1/RoundedImageView</string>
    <string name="library_roundedimageview_licenseId">apache_2_0</string>
    <string name="library_roundedimageview_repositoryLink">https://github.com/vinc3m1/RoundedImageView.git</string>
    <string name="loading">努力加载中...</string>
    <string name="loading_button">取消</string>
    <string name="loading_message">请等一等啦ლ(╹◡╹ლ)</string>
    <string name="maohao"> : </string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mymoney">付款平台:</string>
    <string name="no_net">当前找不到网络</string>
    <string name="no_url">播放地址无效</string>
    <string name="not_download">Did not download:</string>
    <string name="ok">确定</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_done">完成</string>
    <string name="picture_done_front_num">%1$d/%2$d 完成</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_empty_audio_title">"无音频文件
"</string>
    <string name="picture_empty_title">"无视频或照片
"</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_message_max_num">你最多可以选择%1$s张图片</string>
    <string name="picture_message_video_max_num">你最多可以选择%1$s个视频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_please">请稍候...</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_preview">预览</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_quit_audio">退出</string>
    <string name="picture_record_video">录视频</string>
    <string name="picture_rule">不能同时选择图片或视频</string>
    <string name="picture_save_error">图片保存失败</string>
    <string name="picture_save_success">图片保存成功至</string>
    <string name="picture_stop_audio">停止</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="picture_tape">录音</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_video_toast">视频不可预览</string>
    <string name="picture_warning">暂无媒体文件！</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
</resources>