<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/dialog_shadow" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textColor="#ffff572e" android:gravity="center" android:id="@id/tv_title" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/picture_prompt" android:layout_weight="1.0" />
        <TextView android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.5">
            <TextView android:textSize="15.0sp" android:textColor="#ff53575e" android:gravity="center" android:id="@id/tv_content" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/picture_prompt_content" />
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <TextView android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <Button android:textColor="#ff529bea" android:id="@id/btn_cancel" android:background="@drawable/btn_left_bottom_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/picture_cancel" android:layout_weight="1.0" />
                <TextView android:background="@color/line_color" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <Button android:textColor="#ff529bea" android:id="@id/btn_commit" android:background="@drawable/btn_right_bottom_selector" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/picture_confirm" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>