<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/fl_content" android:background="#70000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/ll_root" android:background="@color/color_fa" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/color_53" android:gravity="center" android:id="@id/picture_tv_photo" android:background="@drawable/item_select_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/picture_photograph" />
        <TextView android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/color_53" android:gravity="center" android:id="@id/picture_tv_video" android:background="@drawable/item_select_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/picture_record_video" />
        <TextView android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" />
        <TextView android:background="@color/line_color" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginTop="6.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/color_53" android:gravity="center" android:id="@id/picture_tv_cancel" android:background="@drawable/item_select_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:text="@string/picture_cancel" />
    </LinearLayout>
</FrameLayout>