<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/white" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/id_titleBar" android:layout_width="fill_parent" android:layout_height="wrap_content" layout="@layout/picture_title_bar" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_bottom" android:background="?picture.bottom.bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_alignParentBottom="true">
        <TextView android:enabled="false" android:textSize="14.0sp" android:textColor="?picture.preview.textColor" android:gravity="center|left" android:id="@id/picture_id_preview" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/picture_preview" android:layout_centerVertical="true" />
        <LinearLayout android:enabled="false" android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/id_ll_ok" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <TextView android:textSize="12.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/picture_tv_img_num" android:background="?picture.num.style" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="0" />
            <TextView android:textSize="14.0sp" android:textColor="?picture.complete.textColor" android:gravity="center|left" android:id="@id/picture_tv_ok" android:paddingRight="12.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/picture_please_select" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/picture_recycler" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:layout_above="@id/rl_bottom" android:layout_below="@id/id_titleBar" />
    <TextView android:textSize="18.0sp" android:textColor="@color/tab_color_false" android:gravity="center" android:id="@id/tv_empty" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:text="@string/picture_empty" android:layout_centerInParent="true" android:lineSpacingExtra="3.0dip" />
</RelativeLayout>